font problem fixed on safari - issue was the firefox focus content blocker - troubleshooting layout issues

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -20,6 +20,9 @@
 
 @media screen and (min-width: 20em) {
   .cheat-sheet-flexbox-container {
+    position: absolute;
+    top: 0;
+    right: 0;
     height: calc(100vh - var(--header-mobile-height));
     width: 100vw;
   }
